function(add_new_test target)
    add_executable(${target} ${ARGN})
    target_link_libraries(${target} sec)

    add_test(${target} ${target})

endfunction()

add_new_test(test_commons test_commons.cpp)
add_new_test(test_nodelink test_nodelink.cpp)
add_new_test(test_filesource test_filesource.cpp)
add_new_test(test_results test_results.cpp)
add_new_test(test_arguments test_arguments.cpp)
add_new_test(test_synch test_synch.cpp)
add_new_test(test_prompter test_prompter.cpp)
add_new_test(test_events test_events.cpp)
add_new_test(test_order test_order.cpp)
add_new_test(test_clock test_clock.cpp)
add_new_test(test_trial test_trials.cpp)

if(BUILD_GUI)
    add_new_test(test_plot test_plot.cpp)
    add_new_test(test_dataexchangeserver test_dataexchangeserver.cpp)
    add_new_test(test_dataexchangeclient test_dataexchangeclient.cpp)
    add_new_test(test_launcherinterface test_launcherinterface.cpp)
endif(BUILD_GUI)
